--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,12 +2,17 @@
 
 section#header {
     background-image: url('../img/header-artboard.png');
+    background-repeat: repeat-x;
     height: 575px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 25px;
+    padding-left: 25px;
     .head {
         max-width: 1400px;
         height: 80px;
-        padding-right: 25px;
-        padding-left: 25px;
+        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -19,6 +24,7 @@ section#header {
             .location {
                 display: flex;
                 align-items: center;
+                font-size: 13px;
                 padding-left: 41px;
                 select {
                     cursor: pointer;
@@ -99,7 +105,7 @@ section#header {
                 cursor: pointer;
                 padding: 12px 25px;
                 border: 1px solid white;
-                border-radius: 3px;
+                border-radius: 1px;
                 &::before {
                     content: '+';
                     color: white;
@@ -107,7 +113,6 @@ section#header {
                     font-size: 13px;
                 }
                 &:hover {
-                    // background-color: rgba(255, 255, 255, 0.6);
                     background-color: #fff;
                     span {
                         color: $color_blue_head;
@@ -120,6 +125,82 @@ section#header {
         }
     }
     .main {
-        
+        width: 100%;
+        max-width: 1180px;
+        .title {
+            margin-top: 73px;
+            margin-bottom: 49px;
+            h1 {
+                color: #fff;
+                font-size: 40px;
+                font-weight: 700;
+                text-transform: uppercase;
+                line-height: 49px;
+                margin-bottom: 15px;
+            }
+            h2 {
+                color: rgba($color: #fff, $alpha: 0.5);
+                line-height: 24px;
+            }
+        }
+        form.search {
+            height: 150px;
+            width: 100%;
+            background-color: #fff;
+            padding: 20px 10px;
+            .first_row {
+                margin-bottom: 10px;
+            }
+            .row {
+                height: 50px;
+            } 
+            select {
+                height: 100%;
+                width: 100%;
+                margin-left: 10px;
+                margin-right: 10px;
+                padding-left: 15px;
+                -webkit-appearance: none;
+                background: none;
+                border: 1px solid $color_input_border;
+                font-size: 16px;
+                outline: none;
+                cursor: pointer;
+            }
+            .arrow {
+                position: absolute;
+                right: 30px;
+            }
+            .select {
+                position: relative;
+                display: flex;
+                align-items: center;
+            }
+            .text_field {
+                padding-right: 10px;
+                padding-left: 10px;
+                input {
+                    width: 100%;
+                    height: 100%;
+                    background: none;
+                    font-size: 16px;
+                    border: 1px solid $color_input_border;
+                    padding-left: 15px;
+                    outline: none;
+                }
+            }
+            .search_button {
+                padding-right: 10px;
+                padding-left: 10px;
+                input {
+                    width: 100%;
+                    height: 100%;
+                    background: $color_green;
+                    text-transform: uppercase;
+                    color: #fff;
+                    border: none;
+                }
+            }
+        }
     }
 }
