--- a/src/core/scss/_colors.scss
+++ b/src/core/scss/_colors.scss
@@ -3,3 +3,6 @@ $color_input_border: #ebebeb;
 $color_green: #7ed321;
 
 $color_grey_bg: #f2f2f2;
+$color_grey_text: #979797;
+$color_grey_border: #dcdcdc;
+$color_grey_text_block: #a5a5a5;
