--- a/src/scss/silder_block.scss
+++ b/src/scss/silder_block.scss
@@ -43,14 +43,18 @@
                 margin-left: 0;
             }
         }
-
     }
     .builds {
+        margin-top: 40px;
         width: 100%;
+        height: 100%;
         a {
             text-decoration: none;
             display: flex;
-            height: auto;
+        }
+        .box {
+            padding-left: 10px;
+            padding-right: 10px;
         }
         .build_block {
             height: auto;
@@ -58,44 +62,143 @@
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
-            width: 100%;
-            .photo {
+            width: 100%;    
+            opacity: 1;
+            .photos {
                 width: 100%;
-                height: auto;
-            }
-            .info {
-                width: 100%;
-                border: 1px solid $color_grey_border;
-                border-top: none;
-                padding: 15px 20px 19px 20px;
-                p {
-                    color: #000;
-                }
-                .price {
-                    display: flex;
-                    flex-direction: row;
-                    align-items: flex-end;
-                    margin-bottom: 12px;
-                    p {
-                        font-size: 22px;
-                    }
-                    span {
-                        margin-left: 8px;
-                        font-size: 15px;
-                        color: $color_grey_text_block;
-                    }
-                }
-                .build_location {
-                    display: flex;
-                    #build_bc {
-                        margin-left: 5px;
-                        &:hover {
-                             text-decoration: underline;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                position: relative;
+                .photo {
+                    width: 100%;
+                    height: auto;
+                    &_nav {
+                        bottom: 10px;
+                        height: 2px;
+                        width: 100%;
+                        padding-left: 20px;
+                        padding-right: 20px;
+                        position: absolute;
+                        display: flex;
+                        justify-content: center;
+                        z-index: 10;
+                        &_block {
+                            margin: 0 3px;
+                            box-sizing: content-box;
+                            padding: 4px;
+                            width: 100%;
+                            background-color: #ffffff;
+                            opacity: 0.4;
+                            &:hover {
+                                opacity: 1;
+                            }
                         }
                     }
                 }
-                hr {
-                    background-color: $color_grey_border;
+            }
+            .info {
+                position: relative; 
+                width: 100%;
+                height: 100%;
+                border: 1px solid $color_grey_border;
+                border-top: none;
+                padding: 15px 10px 19px 20px;
+                overflow: hidden;
+                p {
+                    color: #000;
+                }
+                .main {
+                    width: 100%;
+                    overflow: hidden;
+                    .price {
+                        display: flex;
+                        flex-direction: row;
+                        align-items: flex-end;
+                        margin-bottom: 12px;
+                        p {
+                            font-size: 22px;
+                        }
+                        span {
+                            margin-left: 8px;
+                            font-size: 15px;
+                            color: $color_grey_text_block;
+                        }
+                    }
+                    .build_location {
+                        display: flex;
+                        #build_bc {
+                            margin-left: 5px;
+                            &:hover {
+                                 text-decoration: underline;
+                            }
+                        }
+                    }
+                    hr {
+                        background-color: $color_grey_border;
+                    }
+                }
+                .address {
+                    width: 100%;
+                    white-space: nowrap;
+                    float: left;
+                    overflow: hidden;
+                    p {
+                        font-size: 14px;
+                        margin-bottom: 14px;
+                        width: 210px;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                    }
+                    .metro {
+                        display: flex;
+                        flex-direction: column;
+                        .station {
+                            display: flex;
+                            flex-direction: row;
+                            align-items: flex-start;
+                            margin-top: 3px;
+                            .icon {
+                                min-width: 8px;
+                                min-height: 8px;
+                                margin-right: 5px;
+                                margin-top: 3px;
+                                background-color: black;
+                                border-radius: 50%;
+                                &.red {
+                                    background-color: $color_station_red;
+                                }
+                                &.green {
+                                    background-color: $color_station_green;
+                                }
+                                &.blue {
+                                    background-color: $color_station_blue;
+                                }
+                                &.orange {
+                                    background-color: $color_station_orange;
+                                }
+                                &.purple {
+                                    background-color: $color_station_purple;
+                                }
+                            }
+                            &_info {
+                                display: flex;
+                                flex-direction: row;
+                                font-size: 14px;
+                                font-weight: 600;
+                                flex-wrap: wrap;
+                                .name {
+                                    margin-right: 5px;
+                                    height: 20px;
+                                }
+                                .distance {
+                                    height: 20px;
+                                    color: #a5a5a5;
+                                }
+                            }
+                            
+                        }
+                    }
                 }
             }
         }
