--- a/src/scss/silder_block.scss
+++ b/src/scss/silder_block.scss
@@ -56,6 +56,12 @@
             padding-left: 10px;
             padding-right: 10px;
         }
+        &_preloader {
+            height: 400px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         .build_block {
             height: auto;
             display: flex;
@@ -70,12 +76,34 @@
                 display: flex;
                 justify-content: center;
                 position: relative;
+                .tools {
+                    position: absolute;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding: 20px;
+                    width: 100%;
+                    .view {
+                        display: flex;
+                        flex-direction: row;
+                        align-items: flex-end;
+                        a:first-child {
+                            margin-right: 10px;
+                        }
+                    }
+                    a:hover {
+                        opacity: 0.9
+                    }
+                    img {
+                        cursor: pointer;
+                    }
+                    // background-color: red;
+                }
                 .photo {
                     width: 100%;
                     height: auto;
                     &_nav {
-                        bottom: 10px;
-                        height: 2px;
+                        bottom: 0;
                         width: 100%;
                         padding-left: 20px;
                         padding-right: 20px;
@@ -84,14 +112,27 @@
                         justify-content: center;
                         z-index: 10;
                         &_block {
-                            margin: 0 3px;
-                            box-sizing: content-box;
-                            padding: 4px;
+                            display: flex;
+                            align-items: center;
                             width: 100%;
-                            background-color: #ffffff;
-                            opacity: 0.4;
+                            height: 22px;
+                            &_content {
+                                min-height: 2px;
+                                margin: 0 3px;
+                                box-sizing: content-box;
+                                width: 100%;
+                                background-color: #ffffff;
+                                opacity: 0.4;
+                            }
+                            &.active {
+                                .photo_nav_block_content {
+                                    opacity: 1;
+                                }
+                            }
                             &:hover {
-                                opacity: 1;
+                                .photo_nav_block_content {
+                                    opacity: 1;
+                                }
                             }
                         }
                     }
@@ -201,6 +242,20 @@
                     }
                 }
             }
+        }
+    }
+    .show_all-button {
+        margin-top: 50px;
+        padding: 15px 41px;
+        background-color: $color_blue_head;
+        color: white;
+        font-size: 20px;
+        text-transform: uppercase;
+        &:hover {
+            background-color: white;
+            outline: 1px solid $color_blue_head;
+            text-decoration: underline;
+            color: $color_blue_head;
         }
     }
 }
