Added steps section

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,7 @@
 @import './buildings.scss';
 @import './sell.scss';
 @import './commercial_land.scss';
+@import './steps.scss';
 
 //Блоки
 @import './build_promos.scss';
