--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,8 +6,11 @@
 @import './sell.scss';
 @import './commercial_land.scss';
 @import './steps.scss';
+@import './find_best.scss';
+@import './main_fast_search.scss';
 
 //Блоки
+@import './fast_search.scss';
 @import './build_promos.scss';
 
 //Утилиты
