--- a/src/scss/build_promos.scss
+++ b/src/scss/build_promos.scss
@@ -17,11 +17,14 @@
         h3 {
             font-size: 16px;
             color: $color_grey_text;
-            margin-bottom: 25px;
+            margin-bottom: 15px;
         }
     }
     form.build_type {
         display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        padding: 0 40px;
         input {
             display: none;
             &:checked {
@@ -32,6 +35,7 @@
             }
         }
         label {
+            margin-top: 10px;
             padding: 8px 16px;
             font-size: 14px;
             color: #000;
@@ -53,6 +57,8 @@
     }
     .builds {
         margin-top: 40px;
+        display: flex;
+        justify-content: center;
         width: 100%;
         height: 100%;
         a {
@@ -75,8 +81,10 @@
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
-            width: 100%;    
+            // width: 100%;
+            width: 280px;    
             opacity: 1;
+            margin-bottom: 20px;
             .photos {
                 width: 100%;
                 height: 100%;
@@ -253,7 +261,7 @@
         }
     }
     .show_all-button {
-        margin-top: 50px;
+        margin-top: 20px;
         padding: 15px 41px;
         background-color: $color_blue_head;
         color: white;
