--- a/src/core/scss/_colors.scss
+++ b/src/core/scss/_colors.scss
@@ -6,6 +6,7 @@ $color_grey_bg: #f2f2f2;
 $color_grey_text: #979797;
 $color_grey_border: #dcdcdc;
 $color_grey_text_block: #a5a5a5;
+$color_grey_footer: #303030;
 
 $color_station_red: #f22823;
 $color_station_green: #82bd11;
