--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,7 +8,9 @@
 @import './steps.scss';
 @import './find_best.scss';
 @import './main_fast_search.scss';
+@import './works_with.scss';
 @import './write_about.scss';
+@import './footer.scss';
 
 //Блоки
 @import './fast_search.scss';
