--- a/src/scss/write_about.scss
+++ b/src/scss/write_about.scss
@@ -3,6 +3,7 @@ section#write_about {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin-bottom: 40px;
     // justify-content: center;    
     h4.title {
         font-size: 20px;
